[package]
name = "picacg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
reqwest = "0.11.26"
tokio = { version = "1.36.0", features = ["full"] }
libpicacg = { git = "https://github.com/verssionhack/libpicacg.git" }
size_utils = { git = "https://github.com/verssionhack/size_utils.git" }
